--- a/docs/components/buttons.html
+++ b/docs/components/buttons.html
@@ -10,6 +10,9 @@
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
   
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/standaloneAndFull.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/fullOnly.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/overlay.js"></script>
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -289,73 +292,6 @@
         
           <li class="navigation-list-item">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
-            
-              
-              <ul class="navigation-list-child-list ">
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-              </ul>
-            
-          </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-          <li class="navigation-list-item">
-            
             <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities" class="navigation-list-link">Utilities</a>
             
               
@@ -399,6 +335,73 @@
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
                       
                     </li>
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+              </ul>
+            
+          </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+          <li class="navigation-list-item">
+            
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
+            
+              
+              <ul class="navigation-list-child-list ">
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -556,9 +559,9 @@ The full colour version of the buttons are generally use as primary CTA. There s
   </tbody>
 </table>
 
-<p>Il est aussi possible d’ajouter la classe <code class="highlighter-rouge">.plein</code> afin d’avoir des boutons qui ressemblent à ceci:</p>
-
 <p>To render a full colour button, you can add the <code class="highlighter-rouge">.plein</code> class.</p>
+
+<p><em class="label label-lang">fr ::</em> Il est aussi possible d’ajouter la classe <code class="highlighter-rouge">.plein</code> afin d’avoir des boutons qui ressemblent à ceci:</p>
 
 <div class="balmoral-demo code-example">
    <button type="button" class="btn btn-default plein">Default</button>
