--- a/docs/components/callouts.html
+++ b/docs/components/callouts.html
@@ -10,6 +10,9 @@
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
   
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/standaloneAndFull.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/fullOnly.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/overlay.js"></script>
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -289,73 +292,6 @@
         
           <li class="navigation-list-item">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
-            
-              
-              <ul class="navigation-list-child-list ">
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-              </ul>
-            
-          </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-          <li class="navigation-list-item">
-            
             <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities" class="navigation-list-link">Utilities</a>
             
               
@@ -399,6 +335,73 @@
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
                       
                     </li>
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+              </ul>
+            
+          </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+          <li class="navigation-list-item">
+            
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
+            
+              
+              <ul class="navigation-list-child-list ">
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -488,7 +491,7 @@
 <p class="label label-yellow">WIP</p>
 
 
-<p>Encadré de texte avec fond de couleur. Peu importe le niveau de header (h1-h6) le titre et le corp du texte seront toujours de la même taille. Pas de largeur fixe.</p>
+<p><em class="label label-lang">fr ::</em> Encadré de texte avec fond de couleur. Peu importe le niveau de header (h1-h6) le titre et le corp du texte seront toujours de la même taille. Pas de largeur fixe.</p>
 
 <p>3 tailles disponibles: medium est le default, <code class="highlighter-rouge">.small</code> et <code class="highlighter-rouge">.large</code>
 Couleur de background: light grey (default)  <code class="highlighter-rouge">.beige</code>, <code class="highlighter-rouge">.gris</code> &amp;  <code class="highlighter-rouge">.blanc</code>.</p>
