--- a/docs/components/modals.html
+++ b/docs/components/modals.html
@@ -10,6 +10,9 @@
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
   
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/standaloneAndFull.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/fullOnly.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/overlay.js"></script>
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -289,73 +292,6 @@
         
           <li class="navigation-list-item">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
-            
-              
-              <ul class="navigation-list-child-list ">
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-              </ul>
-            
-          </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-          <li class="navigation-list-item">
-            
             <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities" class="navigation-list-link">Utilities</a>
             
               
@@ -399,6 +335,73 @@
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
                       
                     </li>
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+              </ul>
+            
+          </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+          <li class="navigation-list-item">
+            
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
+            
+              
+              <ul class="navigation-list-child-list ">
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -493,10 +496,6 @@
   <li><a href="#pop-over" id="markdown-toc-pop-over">Pop over</a></li>
 </ol>
 
-<p class="label label-red">broken</p>
-
-<p>Please see <a href="https://www.nfb.ca/styleguide/utilitaires/">working versions on nfb.ca</a> (authorization requierd)</p>
-
 <h2 id="modals">Modals</h2>
 
 <div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"loginModal"</span> <span class="na">class=</span><span class="s">"m-modal"</span><span class="nt">&gt;</span>
@@ -535,8 +534,11 @@
 </div>
 
 <h2 id="tooltips">Tooltips</h2>
+<p class="label label-red">broken</p>
 
-<p>Il faut ajouter la classe <code class="highlighter-rouge">is-greyTooltip</code> sur le lien et entrer le texte qui sera afficher dans la bulle dans l’attribut <code class="highlighter-rouge">data-original-title</code>.</p>
+<p>Please see <a href="https://www.nfb.ca/styleguide/utilitaires/">working versions on nfb.ca</a> (authorization requierd)</p>
+
+<p><em class="label label-lang">fr ::</em>Il faut ajouter la classe <code class="highlighter-rouge">is-greyTooltip</code> sur le lien et entrer le texte qui sera afficher dans la bulle dans l’attribut <code class="highlighter-rouge">data-original-title</code>.</p>
 
 <p>Il s’agit des <a href="https://getbootstrap.com/docs/3.4/javascript/#tooltips">tooltip bootstrap</a> stylisé.</p>
 
@@ -548,13 +550,16 @@
 </code></pre></div></div>
 
 <h2 id="pop-over">Pop over</h2>
+<p class="label label-red">broken</p>
 
-<p>Il s’agit des <a href="https://getbootstrap.com/docs/3.4/javascript/#popovers">popOver de bootstrap</a> stylisé. Le container et le trigger peuvent être passé via les attributs <code class="highlighter-rouge">data-container</code> et <code class="highlighter-rouge">data-trigger</code>.</p>
+<p>Please see <a href="https://www.nfb.ca/styleguide/utilitaires/">working versions on nfb.ca</a> (authorization requierd)</p>
+
+<p><em class="label label-lang">fr ::</em> Il s’agit des <a href="https://getbootstrap.com/docs/3.4/javascript/#popovers">popOver de bootstrap</a> stylisé. Le container et le trigger peuvent être passé via les attributs <code class="highlighter-rouge">data-container</code> et <code class="highlighter-rouge">data-trigger</code>.</p>
 
 <div class="balmoral-demo code-example">
-<span class="is-popoverLink helpInfos" data-placement="auto" data-toggle="popover" title="Titre" data-content="&lt;small&gt;Contenu&lt;/small&gt;">?</span>
+<span class="is-popoverLink helpInfos" data-placement="auto" data-trigger="popover" title="Titre" data-container="&lt;small&gt;Contenu&lt;/small&gt;">?</span>
 </div>
-<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"is-popoverLink helpInfos"</span> <span class="na">data-placement=</span><span class="s">"auto"</span> <span class="na">data-toggle=</span><span class="s">"popover"</span>  <span class="na">title=</span><span class="s">"Titre"</span> <span class="na">data-content=</span><span class="s">"&lt;small&gt;Contenu&lt;/small&gt;"</span><span class="nt">&gt;</span>?<span class="nt">&lt;/span&gt;</span>
+<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"is-popoverLink helpInfos"</span> <span class="na">data-placement=</span><span class="s">"auto"</span> <span class="na">data-trigger=</span><span class="s">"popover"</span>  <span class="na">title=</span><span class="s">"Titre"</span> <span class="na">data-container=</span><span class="s">"&lt;small&gt;Contenu&lt;/small&gt;"</span><span class="nt">&gt;</span>?<span class="nt">&lt;/span&gt;</span>
 </code></pre></div></div>
 
 
