--- a/docs/components/cards.html
+++ b/docs/components/cards.html
@@ -10,6 +10,9 @@
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
   
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/standaloneAndFull.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/fullOnly.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/overlay.js"></script>
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -289,73 +292,6 @@
         
           <li class="navigation-list-item">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
-            
-              
-              <ul class="navigation-list-child-list ">
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-              </ul>
-            
-          </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-          <li class="navigation-list-item">
-            
             <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities" class="navigation-list-link">Utilities</a>
             
               
@@ -399,6 +335,73 @@
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
                       
                     </li>
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+              </ul>
+            
+          </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+          <li class="navigation-list-item">
+            
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
+            
+              
+              <ul class="navigation-list-child-list ">
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -500,7 +503,6 @@
       <li><a href="#users-medias--complex-vignettes" id="markdown-toc-users-medias--complex-vignettes">User’s medias / Complex vignettes</a></li>
     </ol>
   </li>
-  <li><a href="#carrousel" id="markdown-toc-carrousel">Carrousel</a></li>
 </ol>
 
 <h2 id="vignettes">Vignettes</h2>
@@ -990,8 +992,6 @@
 </div>
 
 </div>
-
-<h2 id="carrousel">Carrousel</h2>
 
 
           
