--- a/docs/components/messages.html
+++ b/docs/components/messages.html
@@ -10,6 +10,9 @@
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
   
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/standaloneAndFull.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/fullOnly.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/concat/overlay.js"></script>
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -289,73 +292,6 @@
         
           <li class="navigation-list-item">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
-            
-              
-              <ul class="navigation-list-child-list ">
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-              </ul>
-            
-          </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-          <li class="navigation-list-item">
-            
             <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities" class="navigation-list-link">Utilities</a>
             
               
@@ -399,6 +335,73 @@
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
                       
                     </li>
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+              </ul>
+            
+          </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+          <li class="navigation-list-item">
+            
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
+            
+              
+              <ul class="navigation-list-child-list ">
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -493,7 +496,7 @@
 
 <p>Message banners are displayed at the top of a page. Just insert the following code in a  <code class="highlighter-rouge">&lt;% block name = "ribbon"&gt; &lt;/% block&gt;</code> of the template. The x button uses the <a href="../utilities#showhide">html element hiding</a> utility.</p>
 
-<p>Les bandeaux d’alerte s’affiche dans le haut d’une page. Il suffit d’insérer le code suivant dans la zone éditable de template <code class="highlighter-rouge">&lt;%block name="ribbon"&gt;&lt;/%block&gt;</code>. Le bouton x utilise l’utilitaire de <a href="../utilities#showhide">masquage d’élément html</a>.</p>
+<p><em class="label label-lang">fr ::</em> Les bandeaux d’alerte s’affiche dans le haut d’une page. Il suffit d’insérer le code suivant dans la zone éditable de template <code class="highlighter-rouge">&lt;%block name="ribbon"&gt;&lt;/%block&gt;</code>. Le bouton x utilise l’utilitaire de <a href="../utilities#showhide">masquage d’élément html</a>.</p>
 
 <div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"l-bigContainer m-ribbon"</span> <span class="na">id=</span><span class="s">"alerte"</span><span class="nt">&gt;</span>
  <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"l-contentContainer"</span><span class="nt">&gt;</span>
