--- a/docs/components/cards.html
+++ b/docs/components/cards.html
@@ -514,14 +514,8 @@
     <img src="https://media1.onf.ca/medias/nfb_tube/thumbs_large/2013/La-tranchee_55261_LG_1.jpg" class="img-responsive" alt="..." style="visibility: inherit; opacity: 1;" />
   </a>
   <div class="bottomThumbnail">
-    <a href="#" class="titre">Vignette gratuite avec un texte de titre vraiment beaucoup trop long pour tester qu'il est bien tronqué</a><a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title="..."><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 10" class="ico-clock" enable-background="new 0 0 10 10" xml:space="preserve">
-<g>
-<path d="M5,10c2.8,0,5-2.2,5-5S7.8,0,5,0S0,2.2,0,5S2.2,10,5,10z M5,9C2.8,9,1,7.2,1,5s1.8-4,4-4s4,1.8,4,4S7.2,9,5,9z" class="horloge"></path>
-</g>
-<path d="M5.4,5c0,0.3-0.2,0.5-0.5,0.5l0,0C4.6,5.5,4.4,5.3,4.4,5V2c0-0.3,0.2-0.5,0.5-0.5l0,0c0.3,0,0.5,0.2,0.5,0.5V5z" class="aiguille" data-svg-origin="4.900000095367432 5" style="transform-origin: 0px 0px 0px; transform: matrix(1, 0, 0, 1, 0, 0);"></path>
-<path d="M7.8,5c0,0.3-0.2,0.5-0.5,0.5H5C4.7,5.5,4.5,5.3,4.5,5l0,0c0-0.3,0.2-0.5,0.5-0.5h2.2C7.5,4.4,7.8,4.7,7.8,5L7.8,5z" class="aiguille2" data-svg-origin="4.945500025749206 4.990192413330078" style="transform-origin: 0px 0px 0px; transform: matrix(1, 0, 0, 1, 0, 0);"></path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" class="ico-clock-check" xml:space="preserve"><style>.style0{fill:	#c8c9cc;}.check{fill:	none;}</style><g><path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M21.4 9 l-7.7 13.6c-0.2 0.4-0.7 0.7-1.2 0.8c0 0-0.1 0-0.1 0c-0.4 0-0.9-0.2-1.1-0.5l-3.9-4.6c-0.5-0.6-0.5-1.6 0.2-2.1 c0.6-0.5 1.6-0.5 2.1 0.2l2.5 3l6.7-11.7c0.4-0.7 1.3-1 2-0.6C21.6 7.4 21.8 8.3 21.4 9z" class="rond"></path><path class="check" d="M20.9 7c-0.7-0.4-1.6-0.2-2 0.6l-6.7 11.7l-2.5-3c-0.5-0.6-1.5-0.7-2.1-0.2c-0.6 0.5-0.7 1.5-0.2 2.1l3.9 4.6 c0.3 0.3 0.7 0.5 1.1 0.5c0 0 0.1 0 0.1 0c0.5 0 0.9-0.3 1.2-0.8L21.4 9C21.8 8.3 21.6 7.4 20.9 7z"></path></g></svg></a>
+    <a href="#" class="titre">Vignette gratuite avec un texte de titre vraiment beaucoup trop long pour tester qu'il est bien tronqué</a>
+    <a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title="..."><i class="icon-add-o"></i></a>
     <span class="filmRestriction">
       <i class="icon-cash-o"></i>
       <span class="campus-label">campus</span>
@@ -581,14 +575,7 @@
 				</a>
 				<div class="bottomThumbnail">
 					<a href="#" class="titre">Vignette gratuite avec un texte de titre vraiment beaucoup trop long pour tester qu'il est bien tronqué</a>
-					<a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title="..."><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 10" class="ico-clock" enable-background="new 0 0 10 10" xml:space="preserve">
-<g>
-	<path d="M5,10c2.8,0,5-2.2,5-5S7.8,0,5,0S0,2.2,0,5S2.2,10,5,10z M5,9C2.8,9,1,7.2,1,5s1.8-4,4-4s4,1.8,4,4S7.2,9,5,9z" class="horloge"></path>
-</g>
-<path d="M5.4,5c0,0.3-0.2,0.5-0.5,0.5l0,0C4.6,5.5,4.4,5.3,4.4,5V2c0-0.3,0.2-0.5,0.5-0.5l0,0c0.3,0,0.5,0.2,0.5,0.5V5z" class="aiguille" data-svg-origin="4.900000095367432 5" style="transform-origin: 0px 0px 0px; transform: matrix(1, 0, 0, 1, 0, 0);"></path>
-<path d="M7.8,5c0,0.3-0.2,0.5-0.5,0.5H5C4.7,5.5,4.5,5.3,4.5,5l0,0c0-0.3,0.2-0.5,0.5-0.5h2.2C7.5,4.4,7.8,4.7,7.8,5L7.8,5z" class="aiguille2" data-svg-origin="4.945500025749206 4.990192413330078" style="transform-origin: 0px 0px 0px; transform: matrix(1, 0, 0, 1, 0, 0);"></path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" class="ico-clock-check" xml:space="preserve"><style>.style0{fill:	#c8c9cc;}.check{fill:	none;}</style><g><path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M21.4 9 l-7.7 13.6c-0.2 0.4-0.7 0.7-1.2 0.8c0 0-0.1 0-0.1 0c-0.4 0-0.9-0.2-1.1-0.5l-3.9-4.6c-0.5-0.6-0.5-1.6 0.2-2.1 c0.6-0.5 1.6-0.5 2.1 0.2l2.5 3l6.7-11.7c0.4-0.7 1.3-1 2-0.6C21.6 7.4 21.8 8.3 21.4 9z" class="rond"></path><path class="check" d="M20.9 7c-0.7-0.4-1.6-0.2-2 0.6l-6.7 11.7l-2.5-3c-0.5-0.6-1.5-0.7-2.1-0.2c-0.6 0.5-0.7 1.5-0.2 2.1l3.9 4.6 c0.3 0.3 0.7 0.5 1.1 0.5c0 0 0.1 0 0.1 0c0.5 0 0.9-0.3 1.2-0.8L21.4 9C21.8 8.3 21.6 7.4 20.9 7z"></path></g></svg></a>
+					<a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title="..."><i class="icon-add-o"></i></a>
 					<span class="filmRestriction">
 						<i class="icon-cash-o"></i>
 						<span class="campus-label">campus</span>
@@ -652,14 +639,7 @@
 
       <div class="infosDroite" style="width: 138px;">
         <a href="#" class="titre titreDotDotDot" style="overflow-wrap: break-word;">Thubnail payant</a>
-        <a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title=""><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 10" class="ico-clock" enable-background="new 0 0 10 10" xml:space="preserve">
-<g>
-<path d="M5,10c2.8,0,5-2.2,5-5S7.8,0,5,0S0,2.2,0,5S2.2,10,5,10z M5,9C2.8,9,1,7.2,1,5s1.8-4,4-4s4,1.8,4,4S7.2,9,5,9z" class="horloge"></path>
-</g>
-<path d="M5.4,5c0,0.3-0.2,0.5-0.5,0.5l0,0C4.6,5.5,4.4,5.3,4.4,5V2c0-0.3,0.2-0.5,0.5-0.5l0,0c0.3,0,0.5,0.2,0.5,0.5V5z" class="aiguille" data-svg-origin="4.900000095367432 5" style="transform: matrix(1, 0, 0, 1, 0, 0); transform-origin: 0px 0px 0px;"></path>
-<path d="M7.8,5c0,0.3-0.2,0.5-0.5,0.5H5C4.7,5.5,4.5,5.3,4.5,5l0,0c0-0.3,0.2-0.5,0.5-0.5h2.2C7.5,4.4,7.8,4.7,7.8,5L7.8,5z" class="aiguille2" data-svg-origin="4.945500025749206 4.990192413330078" style="transform: matrix(1, 0, 0, 1, 0, 0); transform-origin: 0px 0px 0px;"></path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" class="ico-clock-check" xml:space="preserve"><style>.style0{fill:	#c8c9cc;}.check{fill:	none;}</style><g><path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M21.4 9 l-7.7 13.6c-0.2 0.4-0.7 0.7-1.2 0.8c0 0-0.1 0-0.1 0c-0.4 0-0.9-0.2-1.1-0.5l-3.9-4.6c-0.5-0.6-0.5-1.6 0.2-2.1 c0.6-0.5 1.6-0.5 2.1 0.2l2.5 3l6.7-11.7c0.4-0.7 1.3-1 2-0.6C21.6 7.4 21.8 8.3 21.4 9z" class="rond"></path><path class="check" d="M20.9 7c-0.7-0.4-1.6-0.2-2 0.6l-6.7 11.7l-2.5-3c-0.5-0.6-1.5-0.7-2.1-0.2c-0.6 0.5-0.7 1.5-0.2 2.1l3.9 4.6 c0.3 0.3 0.7 0.5 1.1 0.5c0 0 0.1 0 0.1 0c0.5 0 0.9-0.3 1.2-0.8L21.4 9C21.8 8.3 21.6 7.4 20.9 7z"></path></g></svg></a>
+        <a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title=""><i class="icon-add-o"></i></a>
         <div class="infosSecondaires">
           <div class="creator"><a href="#">Pierre-Luc Granjon</a>, <a href="#">Antoine Lanciaux</a></div>
           2011 <span class="dash">|</span> 26 min
@@ -727,14 +707,7 @@
 							</div>
 							1987 <span class="dash">|</span> 71 min
 						</div>
-						<a class="is-greyTooltip watchLater blanc" data-original-title="Add to playlist" title="..."><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 10" class="ico-clock" enable-background="new 0 0 10 10" xml:space="preserve">
-<g>
-	<path d="M5,10c2.8,0,5-2.2,5-5S7.8,0,5,0S0,2.2,0,5S2.2,10,5,10z M5,9C2.8,9,1,7.2,1,5s1.8-4,4-4s4,1.8,4,4S7.2,9,5,9z" class="horloge"></path>
-</g>
-<path d="M5.4,5c0,0.3-0.2,0.5-0.5,0.5l0,0C4.6,5.5,4.4,5.3,4.4,5V2c0-0.3,0.2-0.5,0.5-0.5l0,0c0.3,0,0.5,0.2,0.5,0.5V5z" class="aiguille"></path>
-<path d="M7.8,5c0,0.3-0.2,0.5-0.5,0.5H5C4.7,5.5,4.5,5.3,4.5,5l0,0c0-0.3,0.2-0.5,0.5-0.5h2.2C7.5,4.4,7.8,4.7,7.8,5L7.8,5z" class="aiguille2"></path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" class="ico-clock-check" xml:space="preserve"><style>.style0{fill:	#c8c9cc;}.check{fill:	none;}</style><g><path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M21.4 9 l-7.7 13.6c-0.2 0.4-0.7 0.7-1.2 0.8c0 0-0.1 0-0.1 0c-0.4 0-0.9-0.2-1.1-0.5l-3.9-4.6c-0.5-0.6-0.5-1.6 0.2-2.1 c0.6-0.5 1.6-0.5 2.1 0.2l2.5 3l6.7-11.7c0.4-0.7 1.3-1 2-0.6C21.6 7.4 21.8 8.3 21.4 9z" class="rond"></path><path class="check" d="M20.9 7c-0.7-0.4-1.6-0.2-2 0.6l-6.7 11.7l-2.5-3c-0.5-0.6-1.5-0.7-2.1-0.2c-0.6 0.5-0.7 1.5-0.2 2.1l3.9 4.6 c0.3 0.3 0.7 0.5 1.1 0.5c0 0 0.1 0 0.1 0c0.5 0 0.9-0.3 1.2-0.8L21.4 9C21.8 8.3 21.6 7.4 20.9 7z"></path></g></svg></a>
+						<a class="is-greyTooltip watchLater blanc" data-original-title="Add to playlist" title="..."><i class="icon-add-o"></i></a>
 					</div>
 				</div>
 			</div>
@@ -787,9 +760,7 @@
 			<div class="infosSecondaires">
                  <span class="nbFilms"><i id="playlist_sidemenu_length_mleroux_yo_2"></i>1 film</span>
               </div>
-			<a href="/member/playlist_delete?pl=191290" class="deleteLink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" xml:space="preserve" class="x-icon">
-<path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M22.4 20.2c0.6 0.6 0.6 1.5 0 2.1 s-1.5 0.6-2.1 0l-5.7-5.7l-5.7 5.7c-0.3 0.3-0.7 0.4-1.1 0.4s-0.8-0.1-1.1-0.4c-0.6-0.6-0.6-1.5 0-2.1l5.7-5.7L6.6 8.8 C6.3 8.5 6.2 8.1 6.2 7.7s0.1-0.8 0.4-1.1c0.6-0.6 1.5-0.6 2.1 0l5.7 5.7l5.7-5.7c0.6-0.6 1.5-0.6 2.1 0s0.6 1.5 0 2.1l-5.7 5.7 L22.4 20.2z"></path>
-</svg>
+			<a href="/member/playlist_delete?pl=191290" class="deleteLink"><i class="icon-delete-o"></i>
 </a>
 		</div>
 	</div>
@@ -822,7 +793,7 @@
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"dropdown more-menu bottomRight"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">data-target=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tool"</span> <span class="na">data-original-title=</span><span class="s">"more options"</span> <span class="na">data-placement=</span><span class="s">"left"</span> <span class="na">data-toggle=</span><span class="s">"dropdown"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;&lt;i</span> <span class="na">class=</span><span class="s">"icon-more-menu-vert"</span><span class="nt">&gt;&lt;/i&gt;&lt;/a&gt;</span>
       <span class="nt">&lt;ul</span> <span class="na">class=</span><span class="s">"dropdown-menu"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;li&gt;&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"btn btn-link"</span> <span class="na">data-original-title=</span><span class="s">"edit"</span><span class="nt">&gt;&lt;i</span> <span class="na">class=</span><span class="s">"icon-edit-circle"</span><span class="nt">&gt;&lt;/i&gt;</span> edit<span class="nt">&lt;/a&gt;&lt;/li&gt;</span>
+        <span class="nt">&lt;li&gt;&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"btn btn-link"</span> <span class="na">data-original-title=</span><span class="s">"edit"</span><span class="nt">&gt;&lt;i</span> <span class="na">class=</span><span class="s">"icon-edit-o"</span><span class="nt">&gt;&lt;/i&gt;</span> edit<span class="nt">&lt;/a&gt;&lt;/li&gt;</span>
         <span class="nt">&lt;li&gt;&lt;form</span> <span class="na">action=</span><span class="s">"#"</span> <span class="na">method=</span><span class="s">"post"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;button</span> <span class="na">type=</span><span class="s">"submit"</span> <span class="na">class=</span><span class="s">"btn btn-link disable"</span> <span class="na">data-original-title=</span><span class="s">"share lesson"</span> <span class="na">id=</span><span class="s">"submit"</span> <span class="na">name=</span><span class="s">"share"</span><span class="nt">&gt;&lt;i</span> <span class="na">class=</span><span class="s">"icon-share-lesson"</span><span class="nt">&gt;&lt;/i&gt;</span> Share<span class="nt">&lt;/button&gt;</span>
         <span class="nt">&lt;/form&gt;&lt;/li&gt;</span>
@@ -830,7 +801,7 @@
         <span class="nt">&lt;form</span> <span class="na">action=</span><span class="s">"#"</span> <span class="na">method=</span><span class="s">"post"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;button</span> <span class="na">type=</span><span class="s">"submit"</span> <span class="na">class=</span><span class="s">"btn btn-link"</span> <span class="na">id=</span><span class="s">"submit"</span> <span class="na">name=</span><span class="s">"unpublish"</span><span class="nt">&gt;&lt;i</span> <span class="na">class=</span><span class="s">"icon-eye-blocked"</span><span class="nt">&gt;&lt;/i&gt;</span> unpublish<span class="nt">&lt;/button&gt;</span>
         <span class="nt">&lt;/form&gt;</span>
-      <span class="nt">&lt;li&gt;&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"btn btn-link disable"</span><span class="nt">&gt;</span> <span class="nt">&lt;i</span> <span class="na">class=</span><span class="s">"icon-delete-circle"</span><span class="nt">&gt;&lt;/i&gt;</span> delete<span class="nt">&lt;/a&gt;</span> <span class="nt">&lt;/li&gt;</span>
+      <span class="nt">&lt;li&gt;&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"btn btn-link disable"</span><span class="nt">&gt;</span> <span class="nt">&lt;i</span> <span class="na">class=</span><span class="s">"icon-delete-o"</span><span class="nt">&gt;&lt;/i&gt;</span> delete<span class="nt">&lt;/a&gt;</span> <span class="nt">&lt;/li&gt;</span>
     <span class="nt">&lt;/ul&gt;</span>
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;/div&gt;</span>
@@ -863,10 +834,7 @@
 					<div class="infosSecondaires  titreDotDotDot" style="overflow-wrap: break-word;">
 						<span class="nbFilms">X films</span>
 					</div>
-					<a class="deleteLink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" xml:space="preserve" class="x-icon">
-<path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M22.4 20.2c0.6 0.6 0.6 1.5 0 2.1 s-1.5 0.6-2.1 0l-5.7-5.7l-5.7 5.7c-0.3 0.3-0.7 0.4-1.1 0.4s-0.8-0.1-1.1-0.4c-0.6-0.6-0.6-1.5 0-2.1l5.7-5.7L6.6 8.8 C6.3 8.5 6.2 8.1 6.2 7.7s0.1-0.8 0.4-1.1c0.6-0.6 1.5-0.6 2.1 0l5.7 5.7l5.7-5.7c0.6-0.6 1.5-0.6 2.1 0s0.6 1.5 0 2.1l-5.7 5.7 L22.4 20.2z"></path>
-</svg>
-</a>
+					<a class="deleteLink"><i class="icon-delete-o"></i></a>
 				</div>
 			</div>
 		</li>
@@ -901,7 +869,7 @@
 						<i class="icon-eye"></i> public
 					</span>
 					<div class="toolBar">
-						<a href="#" class="tool is-greyTooltip icon-edit-circle" data-original-title="edit"></a>
+						<a href="#" class="tool is-greyTooltip icon-edit-o" data-original-title="edit"></a>
 						<form action="#" method="post">
 							<button type="submit" class="tool is-greyTooltip disable" data-original-title="share lesson" id="submit" name="share"><i class="icon-share-lesson"></i></button>
 						</form>
@@ -913,7 +881,7 @@
 										<button type="submit" class="btn btn-link" id="submit" name="unpublish"><i class="icon-eye-blocked"></i> unpublish</button>
 									</form>
 
-								<li><a href="#" class="btn btn-link disable"> <i class="icon-delete-circle"></i> delete</a> </li>
+								<li><a href="#" class="btn btn-link disable"> <i class="icon-delete-o"></i> delete</a> </li>
 							</ul>
 						</div>
 					</div>
@@ -939,7 +907,7 @@
 					<div class="dropdown more-menu bottomRight">
 						<a data-target="#" class="tool" data-original-title="more options" data-placement="left" data-toggle="dropdown" role="button"><i class="icon-more-menu-vert"></i></a>
 						<ul class="dropdown-menu">
-							<li><a href="#" class="btn btn-link" data-original-title="edit"><i class="icon-edit-circle"></i> edit</a></li>
+							<li><a href="#" class="btn btn-link" data-original-title="edit"><i class="icon-edit-o"></i> edit</a></li>
 							<li><form action="#" method="post">
 								<button type="submit" class="btn btn-link disable" data-original-title="share lesson" id="submit" name="share"><i class="icon-share-lesson"></i> Share</button>
 							</form></li>
@@ -948,7 +916,7 @@
 								<button type="submit" class="btn btn-link" id="submit" name="unpublish"><i class="icon-eye-blocked"></i> unpublish</button>
 							</form>
 
-						<li><a href="#" class="btn btn-link disable"> <i class="icon-delete-circle"></i> delete</a> </li>
+						<li><a href="#" class="btn btn-link disable"> <i class="icon-delete-o"></i> delete</a></li>
 					</ul>
 				</div>
 				</div>
@@ -971,18 +939,7 @@
 
 					</div>
 					<div class="chapterTools">
-						<a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title=""><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 10" class="ico-clock" enable-background="new 0 0 10 10" xml:space="preserve">
-<g>
-	<path d="M5,10c2.8,0,5-2.2,5-5S7.8,0,5,0S0,2.2,0,5S2.2,10,5,10z M5,9C2.8,9,1,7.2,1,5s1.8-4,4-4s4,1.8,4,4S7.2,9,5,9z" class="horloge"></path>
-</g>
-<path d="M5.4,5c0,0.3-0.2,0.5-0.5,0.5l0,0C4.6,5.5,4.4,5.3,4.4,5V2c0-0.3,0.2-0.5,0.5-0.5l0,0c0.3,0,0.5,0.2,0.5,0.5V5z" class="aiguille"></path>
-<path d="M7.8,5c0,0.3-0.2,0.5-0.5,0.5H5C4.7,5.5,4.5,5.3,4.5,5l0,0c0-0.3,0.2-0.5,0.5-0.5h2.2C7.5,4.4,7.8,4.7,7.8,5L7.8,5z" class="aiguille2"></path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" class="ico-clock-check" xml:space="preserve"><style>.style0{fill:	#c8c9cc;}.check{fill:	none;}</style><g><path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M21.4 9 l-7.7 13.6c-0.2 0.4-0.7 0.7-1.2 0.8c0 0-0.1 0-0.1 0c-0.4 0-0.9-0.2-1.1-0.5l-3.9-4.6c-0.5-0.6-0.5-1.6 0.2-2.1 c0.6-0.5 1.6-0.5 2.1 0.2l2.5 3l6.7-11.7c0.4-0.7 1.3-1 2-0.6C21.6 7.4 21.8 8.3 21.4 9z" class="rond"></path><path class="check" d="M20.9 7c-0.7-0.4-1.6-0.2-2 0.6l-6.7 11.7l-2.5-3c-0.5-0.6-1.5-0.7-2.1-0.2c-0.6 0.5-0.7 1.5-0.2 2.1l3.9 4.6 c0.3 0.3 0.7 0.5 1.1 0.5c0 0 0.1 0 0.1 0c0.5 0 0.9-0.3 1.2-0.8L21.4 9C21.8 8.3 21.6 7.4 20.9 7z"></path></g></svg></a>
-						<a class="cutLink is-greyTooltip icon-ciseaux" data-original-title="Edit chapters" href="#"></a>
-						<a class="deleteLink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" xml:space="preserve" class="x-icon">
-<path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M22.4 20.2c0.6 0.6 0.6 1.5 0 2.1 s-1.5 0.6-2.1 0l-5.7-5.7l-5.7 5.7c-0.3 0.3-0.7 0.4-1.1 0.4s-0.8-0.1-1.1-0.4c-0.6-0.6-0.6-1.5 0-2.1l5.7-5.7L6.6 8.8 C6.3 8.5 6.2 8.1 6.2 7.7s0.1-0.8 0.4-1.1c0.6-0.6 1.5-0.6 2.1 0l5.7 5.7l5.7-5.7c0.6-0.6 1.5-0.6 2.1 0s0.6 1.5 0 2.1l-5.7 5.7 L22.4 20.2z"></path>
-</svg>
+						<a class="is-greyTooltip watchLater" data-original-title="Add to playlist" title=""><i class="icon-add-o"></i>
 </a>
 					</div>
 				</div>
