--- a/docs/components/images.html
+++ b/docs/components/images.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-  <title>Components - NFB Balmoral</title>
+  <title>Images - NFB Balmoral</title>
   <link rel="stylesheet" href="https://nfb-onf.github.io/balmoral-style/assets/css/just-the-docs.css">
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
@@ -167,7 +167,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link active">Components</a>
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
             
               
               <ul class="navigation-list-child-list ">
@@ -187,9 +187,9 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
+                    <li class="navigation-list-item  active">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html" class="navigation-list-link">Images</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html" class="navigation-list-link active">Images</a>
                       
                     </li>
                   
@@ -494,116 +494,42 @@
       <div class="main-content">
         
           
+            <nav class="breadcrumb-nav">
+              <ol class="breadcrumb-nav-list">
+                
+                  <li class="breadcrumb-nav-list-item"><a href="https://nfb-onf.github.io/balmoral-style/docs/components">Components</a></li>
+                
+                <li class="breadcrumb-nav-list-item"><span>Images</span></li>
+              </ol>
+            </nav>
+          
         
         <div class="page-content">
-          <h1 id="components">Components</h1>
+          <h1 class="no_toc" id="images">Images</h1>
 
-<p>Styles for most of the NFB Platforms components are build on top of <a href="https://getbootstrap.com/docs/3.4/">Bootstrap 3.4</a></p>
+<ol id="markdown-toc">
+  <li><a href="#figures" id="markdown-toc-figures">Figures</a></li>
+</ol>
+
+<h2 id="figures">Figures</h2>
+
+<div class="balmoral-demo code-example">
 
 
-          
-          <hr>
-          <h2 class="text-delta">Table of contents</h2>
-          
-          <ul>
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/messages.html">Alerts & Messages</a>
-              </li>
-              
-            
-              
-            
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html">Images</a>
-              </li>
-              
-            
-              
-            
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/buttons.html">Buttons</a>
-              </li>
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/callouts.html">Callout</a>
-              </li>
-              
-            
-              
-            
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html">Cards & vignettes</a>
-              </li>
-              
-            
-              
-            
-              
-            
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html">Forms</a>
-              </li>
-              
-            
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html">Heros</a>
-              </li>
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/navigation.html">Navigation</a>
-              </li>
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html">Video Player</a>
-              </li>
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/search.html">Search & Filters</a>
-              </li>
-              
-            
-              
-              <li>
-                <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html">Modals and popups</a>
-              </li>
-              
-            
-          </ul>
+<figure class="">
+<img class="" src="https://media1.nfb.ca/medias/nfb_tube/uploaded_images/2017/wa-main-img.jpg" alt="" />
+<figcaption class="">Nance Ackerman, Ariella Pahlke and Teresa McInnes (Photo: Kent Nason)</figcaption>
+</figure>
+
+</div>
+
+<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;figure&gt;</span>
+  <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"img.jpg"</span><span class="nt">&gt;</span>
+  <span class="nt">&lt;figcaption&gt;</span>Nance Ackerman, Ariella Pahlke and Teresa McInnes (Photo: Kent Nason)<span class="nt">&lt;/figcaption&gt;</span>
+<span class="nt">&lt;/figure&gt;</span>
+</code></pre></div></div>
+
+
           
         </div>
       </div>
