--- a/docs/components/images.html
+++ b/docs/components/images.html
@@ -32,7 +32,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
             
           </li>
         
@@ -42,13 +42,9 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
             
           </li>
-        
-      
-    
-      
         
       
     
@@ -86,10 +82,6 @@
                   
                 
                   
-                
-                  
-                
-                  
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/layouts.html" class="navigation-list-link">Layout</a>
@@ -108,13 +100,17 @@
                   
                 
                   
-                
-                  
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/colours.html" class="navigation-list-link">Colours</a>
                       
                     </li>
+                  
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -165,6 +161,10 @@
     
       
         
+      
+    
+      
+        
           <li class="navigation-list-item active">
             
             <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
@@ -187,11 +187,7 @@
                   
                 
                   
-                    <li class="navigation-list-item  active">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html" class="navigation-list-link active">Images</a>
-                      
-                    </li>
+                
                   
                 
                   
@@ -209,17 +205,11 @@
                   
                 
                   
-                
-                  
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/components/callouts.html" class="navigation-list-link">Callout</a>
                       
                     </li>
-                  
-                
-                  
-                
                   
                 
                   
@@ -233,6 +223,12 @@
                   
                 
                   
+                
+                  
+                
+                  
+                
+                  
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
@@ -241,13 +237,25 @@
                   
                 
                   
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
+                      
+                    </li>
+                  
                 
+                  
+                    <li class="navigation-list-item  active">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html" class="navigation-list-link active">Images</a>
+                      
+                    </li>
                   
                 
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html" class="navigation-list-link">Modals and popups</a>
                       
                     </li>
                   
@@ -276,21 +284,9 @@
                     </li>
                   
                 
-                  
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html" class="navigation-list-link">Modals and popups</a>
-                      
-                    </li>
-                  
-                
               </ul>
             
           </li>
-        
-      
-    
-      
         
       
     
@@ -306,8 +302,6 @@
             
               
               <ul class="navigation-list-child-list ">
-                
-                  
                 
                   
                 
@@ -359,17 +353,11 @@
                 
                   
                 
+                  
+                
               </ul>
             
           </li>
-        
-      
-    
-      
-        
-      
-    
-      
         
       
     
@@ -462,6 +450,18 @@
         
       
     
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
   </ul>
 </nav>
 
@@ -509,9 +509,12 @@
 
 <ol id="markdown-toc">
   <li><a href="#figures" id="markdown-toc-figures">Figures</a></li>
+  <li><a href="#image-gallery" id="markdown-toc-image-gallery">Image gallery</a></li>
 </ol>
 
 <h2 id="figures">Figures</h2>
+
+<p><a href="https://blog.nfb.ca/blog/2019/03/11/womens-history-month-nfb/">live example</a></p>
 
 <div class="balmoral-demo code-example">
 
@@ -528,6 +531,12 @@
   <span class="nt">&lt;figcaption&gt;</span>Nance Ackerman, Ariella Pahlke and Teresa McInnes (Photo: Kent Nason)<span class="nt">&lt;/figcaption&gt;</span>
 <span class="nt">&lt;/figure&gt;</span>
 </code></pre></div></div>
+
+<h2 id="image-gallery">Image gallery</h2>
+
+<p class="label label-yellow">coming soon</p>
+
+<p><a href="https://blog.nfb.ca/blog/2018/08/24/pause-alanis-obomsawin-music/">live example</a></p>
 
 
           
