--- a/docs/components/panels.html
+++ b/docs/components/panels.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-  <title>Images - NFB Balmoral</title>
+  <title>Panels - NFB Balmoral</title>
   <link rel="stylesheet" href="https://nfb-onf.github.io/balmoral-style/assets/css/just-the-docs.css">
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
@@ -251,9 +251,9 @@
                   
                 
                   
-                    <li class="navigation-list-item  active">
+                    <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html" class="navigation-list-link active">Images</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/images.html" class="navigation-list-link">Images</a>
                       
                     </li>
                   
@@ -291,9 +291,9 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
+                    <li class="navigation-list-item  active">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/panels.html" class="navigation-list-link">Panels</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/panels.html" class="navigation-list-link active">Panels</a>
                       
                     </li>
                   
@@ -517,44 +517,62 @@
                 
                   <li class="breadcrumb-nav-list-item"><a href="https://nfb-onf.github.io/balmoral-style/docs/components">Components</a></li>
                 
-                <li class="breadcrumb-nav-list-item"><span>Images</span></li>
+                <li class="breadcrumb-nav-list-item"><span>Panels</span></li>
               </ol>
             </nav>
           
         
         <div class="page-content">
-          <h1 class="no_toc" id="images">Images</h1>
-
-<ol id="markdown-toc">
-  <li><a href="#figures" id="markdown-toc-figures">Figures</a></li>
-  <li><a href="#image-gallery" id="markdown-toc-image-gallery">Image gallery</a></li>
-</ol>
-
-<h2 id="figures">Figures</h2>
-
-<p><a href="https://blog.nfb.ca/blog/2019/03/11/womens-history-month-nfb/">live example</a></p>
-
-<div class="balmoral-demo code-example">
+          <h1 class="no_toc" id="simple-panel">Simple Panel</h1>
+<p class="label label-yellow">WIP</p>
 
 
-<figure class="">
-<img class="" src="https://media1.nfb.ca/medias/nfb_tube/uploaded_images/2017/wa-main-img.jpg" alt="" />
-<figcaption class="">Nance Ackerman, Ariella Pahlke and Teresa McInnes (Photo: Kent Nason)</figcaption>
-</figure>
+<div class="balmoral-demo bg-grey-lt-200 code-example">
+
+<div class="standalone">
+<div class="m-standalone-page">
+
+<header>
+    <h4>
+      Forgot your password?
+    </h4>
+</header>
+
+    <div class="l-blocBlanc">
+        <div class="bodyEtape s-auth paddingEtapes">
+            <h2>Reset your password</h2>
+            <p>Just type in your email address and we'll send you an email telling you how to create another one.</p>
+
+            <form method="post" class="form-horizontal bootstrapValidation fv-form fv-form-bootstrap" novalidate="novalidate"><button type="submit" class="fv-hidden-submit" style="display: none; width: 0px; height: 0px;"></button>
+                <input type="hidden" name="csrfmiddlewaretoken" value="bqBP04v2BkLXikLYaxMgEdpSIyFivtqxRW9dN39AgRcHvO7bVdUUVeX5hHWsU3ee" />
+                <div class="form-group has-feedback">
+                    <label class="control-label col-sm-3 col-xl-4" for="email">Email</label>
+                    <div class="col-sm-9 col-xl-8">
+                        <input type="email" data-fv-notempty="true" autocapitalize="off" name="email" class="form-control" id="email" data-fv-field="email" data-kwimpalastatus="alive" data-kwimpalaid="1552593034663-2" /><i class="form-control-feedback" data-fv-icon-for="email" style="display: none;"></i>
+                    <small class="help-block" data-fv-validator="emailAddress" data-fv-for="email" data-fv-result="NOT_VALIDATED" style="display: none;">Please enter a valid email address</small><small class="help-block" data-fv-validator="notEmpty" data-fv-for="email" data-fv-result="NOT_VALIDATED" style="display: none;">Please enter a value</small></div>
+                </div>
+
+                 <div class="formButtonsAndLinks">
+                    <button type="submit" class="btn btn-primary plein lg-padding">Send</button>
+                    <p class="extraLink">
+                        <a href="/en/auth/account/register/?next=/auth/oidc/">Become a member</a> /
+                        <a href="http://help.nfb.ca/">Need help?</a>
+                    </p>
+                 </div>
+            </form>
+        </div>
+    </div>
+
+            </div>
+            </div>
+
 
 </div>
 
-<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;figure&gt;</span>
-  <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"img.jpg"</span><span class="nt">&gt;</span>
-  <span class="nt">&lt;figcaption&gt;</span>Nance Ackerman, Ariella Pahlke and Teresa McInnes (Photo: Kent Nason)<span class="nt">&lt;/figcaption&gt;</span>
-<span class="nt">&lt;/figure&gt;</span>
+<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">""</span><span class="nt">&gt;</span>
+
+<span class="nt">&lt;/div&gt;</span>  
 </code></pre></div></div>
-
-<h2 id="image-gallery">Image gallery</h2>
-
-<p class="label label-yellow">coming soon</p>
-
-<p><a href="https://blog.nfb.ca/blog/2018/08/24/pause-alanis-obomsawin-music/">live example</a></p>
 
 
           
